[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 34.0
margin_right = 260.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "0
"

[node name="Message" type="Label" parent="."]
margin_left = 34.0
margin_top = 225.0
margin_right = 512.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 2 )
text = "DODGE THE 
CREEPS!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartButton" type="Button" parent="."]
margin_left = 167.0
margin_top = 489.0
margin_right = 313.0
margin_bottom = 539.0
custom_fonts/font = SubResource( 3 )
text = "START"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
